# mcollector

./: .gitignore  .pre-commit-config.yaml  Makefile  setup.cfg
mcollector-tests/: setup.cfg
mcollector-tests/mcollector_tests/: factories.py
src/: setup.cfg  setup.py
src/mcollector/: app.py  base_model.py  db.py  errors.py  fastapi.py  generic_repository.py
src/mcollector/db/: mappings.py
src/mcollector/domain/: models.py
src/mcollector/entrypoints/fastapi/: app.py
src/mcollector/entrypoints/fastapi/views/: __init__.py  buildings.py  buildings_views.py
src/mcollector/locations/: mappings.py  models.py  repository.py  service.py  uow.py  views.py
src/mcollector/locations/db/: mappings.py
src/mcollector/locations/entrypoints/fastapi/: app.py
src/mcollector/locations/entrypoints/fastapi/views/: __init__.py  buildings_views.py
src/mcollector/locations/repository/: buildings_repository.py
src/mcollector/locations/services/: buildings_service.py
src/mcollector/orm/: mappings.py
src/mcollector/repository/: buildings_repository.py
src/mcollector/services/: buildings_service.py
src/mcollector/views/: __init__.py  buildings.py
tests/: conftest.py
tests/db/: test_buildings_repository.py  test_mappings.py
tests/entrypoints/: conftest.py  test_views.py
tests/test_locations/: conftest.py  test_buildings_repository.py  test_buildings_service.py  test_location_views.py  test_locations_repository.py  test_locations_service.py  test_locations_uow.py  test_models.py  test_uow.py  test_views.py
tests/unit/: test_buildings.py  test_buildings_repository.py  test_buildings_service.py  test_mappings.py  test_models.py
tests/user_stories/: test_unused_models.py  (+1 more)
