[metadata]
name=mcollector
version=0.1.0
description=Measurements Collector

[options]
include_package_data = True
packages = find:
install_requires =
    SQLAlchemy==1.4.20
    uvicorn==0.14.0
    aiosqlite==0.17.0
    fastapi==0.66.0

[options.extras_require]
test =
    pytest==6.2.4
    pytest-asyncio==0.15.1
    pytest-cov==2.12.1
extra =
    black==21.6b0
    flake8==3.9.2
    isort==5.9.1
    mypy==0.910
    pre-commit==2.13.0

[flake8]
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88
extend-ignore = E203

[mypy]
exclude = tests/
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
disallow_any_generics = True
check_untyped_defs = True
no_implicit_reexport = True
disallow_untyped_defs = True
ignore_missing_imports = True

[mypy-tests.*]
ignore_errors = True

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'