[metadata]
name=mcollector
version=0.1.0
description=Measurements Collector

[options]
include_package_data = True
packages = find:
install_requires =
    SQLAlchemy==1.4.20
    uvicorn==0.14.0
    aiosqlite==0.17.0
    fastapi==0.66.0

[options.extras_require]
test =
    pytest==6.2.4
    pytest-asyncio==0.15.1
    pytest-cov==2.12.1
    httpx==0.18.2
extra =
    black==21.6b0
    flake8==3.9.2
    isort==5.9.1
    mypy==0.910
    pre-commit==2.13.0